; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/shlwapi/extr_path.c_heap_strdupAtoW.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/shlwapi/extr_path.c_heap_strdupAtoW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i64)* @heap_strdupAtoW to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @heap_strdupAtoW(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  store i32* null, i32** %3, align 8
  %5 = load i64, i64* %2, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %26

7:                                                ; preds = %1
  %8 = load i32, i32* @CP_ACP, align 4
  %9 = load i64, i64* %2, align 8
  %10 = call i32 @MultiByteToWideChar(i32 %8, i32 0, i64 %9, i32 -1, i32* null, i32 0)
  store i32 %10, i32* %4, align 4
  %11 = call i32 (...) @GetProcessHeap()
  %12 = load i32, i32* %4, align 4
  %13 = sext i32 %12 to i64
  %14 = mul i64 %13, 4
  %15 = trunc i64 %14 to i32
  %16 = call i32* @HeapAlloc(i32 %11, i32 0, i32 %15)
  store i32* %16, i32** %3, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %25

19:                                               ; preds = %7
  %20 = load i32, i32* @CP_ACP, align 4
  %21 = load i64, i64* %2, align 8
  %22 = load i32*, i32** %3, align 8
  %23 = load i32, i32* %4, align 4
  %24 = call i32 @MultiByteToWideChar(i32 %20, i32 0, i64 %21, i32 -1, i32* %22, i32 %23)
  br label %25

25:                                               ; preds = %19, %7
  br label %26

26:                                               ; preds = %25, %1
  %27 = load i32*, i32** %3, align 8
  ret i32* %27
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i64, i32, i32*, i32) #1

declare dso_local i32* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
